--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import url('https://api.fontshare.com/v2/css?f[]=clash-display@600,700&display=swap');
+@import url('https://api.fontshare.com/v2/css?f[]=switzer@1&f[]=clash-display@600,700&display=swap');
 
 @import "variables";
 @import "theme";
