--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -3,6 +3,7 @@
 
 {% block head_extra %}
 {{ jsonld::breadcrumb(title=page.title, url=page.permalink, lang=lang) }}
+{{ jsonld::contactpage(url=page.permalink, lang=lang) }}
 {% endblock %}
 
 {% block content %}
@@ -21,34 +22,23 @@
   <div class="container container--narrow">
     {{ page.content | safe }}
 
-    <form class="contact-form" action="{{ config.extra.formspree_endpoint }}" method="POST">
-      <div style="position:absolute;left:-9999px" aria-hidden="true">
-        <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
-      </div>
-
+    <form class="contact-form">
       <div>
         <label for="name">{{ trans(key="label_name", lang=lang) }}</label>
-        <input type="text" id="name" name="name" required autocomplete="name" aria-required="true">
+        <input type="text" id="name" name="name" disabled>
       </div>
 
       <div>
         <label for="email">{{ trans(key="label_email", lang=lang) }}</label>
-        <input type="email" id="email" name="email" required autocomplete="email" aria-required="true">
+        <input type="email" id="email" name="email" disabled>
       </div>
 
       <div>
         <label for="message">{{ trans(key="label_message", lang=lang) }}</label>
-        <textarea id="message" name="message" required aria-required="true"></textarea>
+        <textarea id="message" name="message" disabled></textarea>
       </div>
 
-      <div>
-        <label class="checkbox-label">
-          <input type="checkbox" required>
-          <span>{{ trans(key="label_consent", lang=lang) }}</span>
-        </label>
-      </div>
-
-      <button type="submit" class="btn btn--glow">{{ trans(key="cta_send", lang=lang) }}</button>
+      <button type="button" class="btn btn--disabled" disabled>Coming Soon</button>
     </form>
   </div>
 </section>
